tests/Demo/front/SemanticError/02_StaticAnalysisDemo.c
int64_t a;
int64_t a;

void main() {
    int64_t unusedVar;
    notDeclared = 5;
    fonctionQuiMarchePas();
}
